loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:6: error: not found: value foward
  foward()
  ^