loopfor.LoopStairs.scala.code
while (!isFacingWall()) {
  forward()
}
for (loop <- 1 to 8) {
  left()
  foward()
  right()
  forward()
}
forward(3)